<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valor_em_real"
        android:layout_gravity="center"
        android:textSize="25sp"
         />

    <EditText
        android:id="@+id/edit_value"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:inputType="numberSigned|numberDecimal"
        android:digits="1234567890.,"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:textSize="30sp"
        android:hint="Valor..."
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/cota_o_do_d_lar"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cota_o_do_euro"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="100dp"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <EditText
            android:id="@+id/edit_cotacao_dollar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="numberSigned|numberDecimal"
            android:digits="1234567890.,"
            android:textSize="20sp"
            android:hint="Valor..."
            />

        <EditText
            android:id="@+id/edit_cotacao_euro"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="numberSigned|numberDecimal"
            android:digits="1234567890.,"
            android:textSize="20sp"
            android:hint="Valor..."
            android:layout_marginLeft="60dp"
            />
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/valor_em_dollar"
        />

    <TextView
        android:id="@+id/text_dollar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:padding="5dp"
        android:textColor="@color/colorAccent"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/valor_em_euro"
        />

    <TextView
        android:id="@+id/text_euro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:padding="5dp"
        android:textColor="@color/colorAccent"
        />


        <Button
            android:id="@+id/button_calculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            android:text="@string/calcular"
            android:layout_marginTop="40dp"
           />


</LinearLayout>